Added SQLite Added NewsApi Added transparent icon Added persona message Modified conversation format Expanded conversation system

--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -3,6 +3,9 @@
 		"Token": "DiscordBotToken",
 		"OpenAIKey": "OpenAIKey"
 	},
+	"ExternalUrls": {
+		"NewsApiUrl": ""
+	},
 	"ConnectionStrings": {
 		"AmiquinContext": "LeaveEmptyForDefaultPath"
 	}
