--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ BOT_TOKEN=your-bot-token-here
 OPEN_AI_KEY=your-openai-key-here
 LOGS_PATH=/Amiquin/Data/Logs
 PRINT_LOGO=false
+SQLITE_PATH=/Amiquin/Data/Amiquin.db
