Improved AI && Can talk over voice chat now

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ OPEN_AI_KEY=your-openai-key-here
 LOGS_PATH=/Amiquin/Data/Logs
 PRINT_LOGO=false
 SQLITE_PATH=/Amiquin/Data/Amiquin.db
+VOICE_MODEL=en_GB-northern_english_male-medium
+TTS_MODEL_NAME=piper
