--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -3,8 +3,10 @@
 		"Token": "DiscordBotToken",
 		"OpenAIKey": "OpenAIKey"
 	},
-	"ExternalUrls": {
-		"NewsApiUrl": ""
+	"External": {
+		"NewsApiUrl": "",
+		"PiperCommand": "piper",
+		"ModelName": "en_GB-northern_english_male-medium"
 	},
 	"ConnectionStrings": {
 		"AmiquinContext": "LeaveEmptyForDefaultPath"
