--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ LOGS_PATH=/Amiquin/Data/Logs
 PRINT_LOGO=false
 SQLITE_PATH=/Amiquin/Data/Amiquin.db
 TTS_MODEL_NAME=en_GB-northern_english_male-medium
-PIPER_COMMAND=/usr/local/bin/piper/piper
+PIPER_COMMAND=/root/.local/bin/piper
