--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ BOT_TOKEN=your-bot-token-here
 OPEN_AI_KEY=your-openai-key-here
 LOGS_PATH=/Amiquin/Data/Logs
 PRINT_LOGO=false
-SQLITE_PATH=/Amiquin/Data/Amiquin.db
+SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
 TTS_MODEL_NAME=en_GB-northern_english_male-medium
 PIPER_COMMAND=/root/.local/bin/piper
