--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-BOT_TOKEN=your-bot-token-here
-OPEN_AI_KEY=your-openai-key-here
-LOGS_PATH=/Amiquin/Data/Logs
-PRINT_LOGO=false
-SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
-TTS_MODEL_NAME=en_GB-northern_english_male-medium
-PIPER_COMMAND=/root/.local/bin/piper
+AMQ_BOT_TOKEN=your-bot-token-here
+AMQ_OPEN_AI_KEY=your-openai-key-here
+AMQ_LOGS_PATH=/Amiquin/Data/Logs
+AMQ_PRINT_LOGO=false
+AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
+AMQ_TTS_MODEL_NAME=en_GB-northern_english_male-medium
+AMQ_PIPER_COMMAND=/root/.local/bin/piper
