Added message fetch count option

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ AMQ_PRINT_LOGO=false
 AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
 AMQ_TTS_MODEL_NAME=en_GB-northern_english_male-medium
 AMQ_PIPER_COMMAND=/root/.local/bin/piper
+AMQ_MESSAGE_FETCH_COUNT=40
