--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -1,7 +1,8 @@
 {
 	"Bot": {
 		"Token": "DiscordBotToken",
-		"OpenAIKey": "OpenAIKey"
+		"OpenAIKey": "OpenAIKey",
+		"MessageFetchCount": 40
 	},
 	"External": {
 		"NewsApiUrl": "",
