--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -2,10 +2,11 @@
 	"Bot": {
 		"Token": "DiscordBotToken",
 		"OpenAIKey": "OpenAIKey",
-		"MessageFetchCount": 40
+		"MessageFetchCount": 40,
+		"TokenLimit": 20000
 	},
 	"External": {
-		"NewsApiUrl": "",
+		"NewsApiUrl": "https://inshorts.com/",
 		"PiperCommand": "piper",
 		"ModelName": "en_GB-northern_english_male-medium"
 	},
