Updated appsettings template

--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -3,7 +3,7 @@
 		"Token": "DiscordBotToken",
 		"OpenAIKey": "OpenAIKey",
 		"MessageFetchCount": 40,
-		"TokenLimit": 20000
+		"MaxTokens": 20000
 	},
 	"External": {
 		"NewsApiUrl": "https://inshorts.com/",
