Amiquin server meta update

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
 AMQ_TTS_MODEL_NAME=en_GB-northern_english_male-medium
 AMQ_PIPER_COMMAND=/root/.local/bin/piper
 AMQ_MESSAGE_FETCH_COUNT=40
+AMQ_BOT_NAME=Amiquin
+AMQ_BOT_VERSION=1.0.0
