MySQL setup && editorconfig

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ AMQ_OPEN_AI_KEY=your-openai-key-here
 AMQ_LOGS_PATH=/Amiquin/Data/Logs
 AMQ_PRINT_LOGO=false
 AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
+AMQ_MYSQL_CONNECTION_STRING=mysql://user:password@localhost:3306/amiquin
 AMQ_TTS_MODEL_NAME=en_GB-northern_english_male-medium
 AMQ_PIPER_COMMAND=/root/.local/bin/piper
 AMQ_MESSAGE_FETCH_COUNT=40
