Mutiple provider database support

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
+# Tokens
 AMQ_BOT_TOKEN=your-bot-token-here
 AMQ_OPEN_AI_KEY=your-openai-key-here
-AMQ_LOGS_PATH=/Amiquin/Data/Logs
+
+# General Settings
 AMQ_PRINT_LOGO=false
-AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
-AMQ_MYSQL_CONNECTION_STRING=mysql://user:password@localhost:3306/amiquin
 AMQ_TTS_MODEL_NAME=en_GB-northern_english_male-medium
 AMQ_PIPER_COMMAND=/root/.local/bin/piper
 AMQ_MESSAGE_FETCH_COUNT=40
 AMQ_BOT_NAME=Amiquin
 AMQ_BOT_VERSION=1.0.0
+
+# Database Settings
+AMQ_DATABASE_MODE=1 # 0 for SQLite, 1 for MySQL
+AMQ_LOGS_PATH=/Amiquin/Data/Logs
+AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
+AMQ_DB_CONNECTION_STRING="Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;Pooling=True;"
+AMQ_DB_NAME=amiquin_db
+AMQ_DB_ROOT_PASSWORD=rootpassword
+AMQ_DB_USER=amiquin_user
+AMQ_DB_USER_PASSWORD=amiquin_password
