--- a/source/Amiquin.Infrastructure/Amiquin.Infrastructure.csproj
+++ b/source/Amiquin.Infrastructure/Amiquin.Infrastructure.csproj
@@ -7,7 +7,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.6" />
     <PackageReference Include="MySql.Data" Version="9.3.0" />
-    <PackageReference Include="MySql.EntityFrameworkCore" Version="9.0.3+MySQL9.3.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.6" />
   </ItemGroup>
 
   <ItemGroup>
