--- a/source/Amiquin.Bot/appsettings.example.json
+++ b/source/Amiquin.Bot/appsettings.example.json
@@ -10,7 +10,10 @@
 		"PiperCommand": "piper",
 		"ModelName": "en_GB-northern_english_male-medium"
 	},
-	"ConnectionStrings": {
-		"AmiquinContext": "LeaveEmptyForDefaultPath"
+	"Database": {
+		"Mode": 1,
+		"ConnectionString": "Server=localhost;User=YourUser;Password=YourPassword;Database=YourDB;sslmode=none;AllowPublicKeyRetrieval=True",
+		"SQLitePath": "Data Source=/Amiquin/Data/Amiquin.db",
+		"LogsPath": "/Amiquin/Data/Logs"
 	}
 }
