--- a/source/.editorconfig
+++ b/source/.editorconfig
@@ -4,7 +4,7 @@ root = true
 # All files - default to LF line endings
 [*]
 end_of_line = lf
-insert_final_newline = true
+insert_final_newline = false
 charset = utf-8
 
 # YAML files
