--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -74,14 +74,25 @@ jobs:
           echo ""
           echo "Documentation structure:"
           find generated -type f -name "*.html" | head -10
+          echo ""
+          echo "Checking for index.html:"
+          if [ -f "generated/index.html" ]; then
+            echo "✅ index.html found"
+            echo "File size: $(stat -c%s generated/index.html) bytes"
+          else
+            echo "❌ index.html missing"
+            exit 1
+          fi
 
       - name: Deploy to web branch
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./generated
           publish_branch: web
           force_orphan: true
+          enable_jekyll: false
+          allow_empty_commit: false
 
       - name: Output deployment info
         run: |
