fix: Update DocFX version and add API directory verification
- Updated DocFX version from 2.75.3 to 2.78.3 to match local version
- Added comprehensive verification of API directory and index.html generation
- This should fix the missing API index.html file issue

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -43,7 +43,7 @@ jobs:
           dotnet-version: "9.0.x"
 
       - name: Setup DocFX
-        run: dotnet tool update -g docfx --version 2.75.3
+        run: dotnet tool update -g docfx --version 2.78.3
 
       - name: Restore dependencies for API documentation
         run: dotnet restore source/source.sln
@@ -82,6 +82,20 @@ jobs:
           else
             echo "❌ index.html missing"
             exit 1
+          fi
+          echo ""
+          echo "Checking API directory:"
+          if [ -d "generated/api" ]; then
+            echo "✅ API directory found"
+            echo "API files:"
+            ls -la generated/api/ | head -10
+            if [ -f "generated/api/index.html" ]; then
+              echo "✅ API index.html found"
+            else
+              echo "❌ API index.html missing"
+            fi
+          else
+            echo "❌ API directory missing"
           fi
 
       - name: Deploy to web branch
