Add configuration options and services for Discord bot chat functionality
- Created appsettings.example.json for configuration settings.
- Added new configuration classes: ChatOptions, DataPathOptions, DiscordOptions, SessionManagementOptions.
- Implemented core services for chat functionality: ConversationCoreService, DiscordBotChatService, MessageHistoryManager, and SessionManager.
- Introduced interfaces for conversation and message management: IConversationCoreService, IDiscordBotChatService, IMessageManager, ISemaphoreManager, ISessionManager.
- Enhanced dependency injection in InjectionConfigurator to include new services and options.
- Updated project dependencies to include Jiro.Shared for enhanced functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 
 *ExternalTools/
 
+# Development local files and ideas
+dev-local/
+
 # DocFX generated documentation
 generated/
 dev/api/*
@@ -415,3 +418,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+.claude/settings.local.json
+CLAUDE.md
