--- a/source/Amiquin.Bot/Amiquin.Bot.csproj
+++ b/source/Amiquin.Bot/Amiquin.Bot.csproj
@@ -10,10 +10,12 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.17.4" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
-    <PackageReference Include="Jiro.Shared" Version="1.4.4" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.6" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.6" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+    <PackageReference Include="Jiro.Shared" Version="1.4.4">
+      <ExcludeAssets>contentFiles</ExcludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
@@ -35,9 +37,9 @@
   </PropertyGroup>
 
  <ItemGroup>
-    <ContentWithTargetPath Include="appsettings.json" Condition="Exists('appsettings.json')">
+    <ContentWithTargetPath Include="Configuration\appsettings.json" Condition="Exists('Configuration\appsettings.json')">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        <TargetPath>appsettings.json</TargetPath>
+        <TargetPath>Configuration\appsettings.json</TargetPath>
     </ContentWithTargetPath>
   </ItemGroup>
   
