feat(docs): Add comprehensive configuration, contributing, and installation guides
- Created configuration.md detailing bot setup, environment variables, and server settings.
- Added contributing.md to outline contribution guidelines, code style, and testing strategies.
- Introduced database-schema.md to describe the database models and relationships.
- Developed development.md for setting up a local development environment and workflow.
- Established getting-started.md for quick setup instructions for new users.
- Implemented git-setup.md to ensure consistent line endings across platforms.
- Added installation.md covering various installation methods for Amiquin.
- Included .gitkeep files in images, public, and tags directories to track empty folders.

--- a/dev/docs/toc.yml
+++ b/dev/docs/toc.yml
@@ -1,9 +1,25 @@
-- name: Getting Started
+- name: Documentation Home
   href: index.md
-- name: Project Structure
-  href: project-structure.md
+- name: Getting Started
+  href: getting-started.md
+- name: Installation
+  href: installation.md
+- name: Configuration
+  href: configuration.md
+- name: Commands Reference
+  href: commands.md
 - name: User Guide
   href: user-guide.md
+- name: Project Structure
+  href: project-structure.md
+- name: Architecture
+  href: architecture.md
+- name: Development
+  href: development.md
+- name: Git Setup
+  href: git-setup.md
+- name: Contributing
+  href: contributing.md
 - name: Scripts Reference
   href: scripts-reference.md
 - name: Database Schema
