Refactor chat session management and database schema
- Removed the in-memory SessionManager class to streamline session handling.
- Updated AmiquinContext to configure ChatSession relationships and indexes for improved performance.
- Added migration scripts to reflect changes in the database schema, including the introduction of GUID primary keys for ChatSession and SessionMessage entities.
- Adjusted SessionMessage to reference ChatSession using string IDs instead of integers.
- Enhanced indexing on ChatSession for better query performance based on activity and ownership.

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,67 @@
-# Tokens
-AMQ_BOT_TOKEN=your-bot-token-here
-AMQ_OPEN_AI_KEY=your-openai-key-here
+# Amiquin Environment Configuration Example
+# This file shows all available configuration options using AMQ_ prefix
+# Copy this file to .env and customize the values for your environment
 
-# General Settings
-AMQ_PRINT_LOGO=false
-AMQ_TTS_MODEL_NAME=en_GB-northern_english_male-medium
-AMQ_PIPER_COMMAND=/root/.local/bin/piper
-AMQ_MESSAGE_FETCH_COUNT=40
-AMQ_BOT_NAME=Amiquin
-AMQ_BOT_VERSION=1.0.0
+# ======================
+# Bot Configuration
+# ======================
+AMQ_Bot__Token=your-discord-bot-token-here
 
-# Database Settings
-AMQ_DATABASE_MODE=1 # 0 for SQLite, 1 for MySQL
-AMQ_LOGS_PATH=/Amiquin/Data/Logs
-AMQ_SQLITE_PATH="Data Source=/Amiquin/Data/Amiquin.db"
-AMQ_DB_CONNECTION_STRING="Server=myServerAddress;Database=myDataBase;Uid=myUsername;Pwd=myPassword;Pooling=True;"
-AMQ_DB_NAME=amiquin_db
-AMQ_DB_ROOT_PASSWORD=rootpassword
-AMQ_DB_USER=amiquin_user
-AMQ_DB_USER_PASSWORD=amiquin_password
+# ======================
+# OpenAI Chat Configuration
+# ======================
+AMQ_Chat__AuthToken=sk-your-openai-api-key-here
+AMQ_Chat__SystemMessage=I want you to act as personal assistant called Amiquin. You are friendly, helpful and professional.
+AMQ_Chat__TokenLimit=2000
+AMQ_Chat__Model=gpt-4o-mini
+AMQ_Chat__Enabled=true
+
+# ======================
+# Database Configuration
+# ======================
+AMQ_Database__Mode=1
+# Mode 0: MySQL, Mode 1: SQLite, Mode 2: MSSQL, Mode 3: PostgreSQL
+
+# SQLite Connection (when Mode=1)
+AMQ_ConnectionStrings__AmiquinContext=Data Source=Data/Database/amiquin.db
+
+# MySQL Connection (when Mode=0)
+# AMQ_ConnectionStrings__AmiquinContext=Server=localhost;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;Pooling=True;
+
+# ======================
+# Data Paths Configuration
+# ======================
+AMQ_DataPaths__Logs=Data/Logs
+AMQ_DataPaths__Messages=Data/Messages
+AMQ_DataPaths__Sessions=Data/Sessions
+AMQ_DataPaths__Plugins=Data/Plugins
+AMQ_DataPaths__Configuration=Configuration
+
+# ======================
+# Voice/TTS Configuration (Optional)
+# ======================
+AMQ_Voice__TTSModelName=en_GB-northern_english_male-medium
+AMQ_Voice__PiperCommand=/usr/local/bin/piper
+AMQ_Voice__Enabled=true
+
+# ======================
+# General Bot Settings
+# ======================
+AMQ_Bot__Name=Amiquin
+AMQ_Bot__Version=1.0.0
+AMQ_Bot__PrintLogo=false
+AMQ_Bot__MessageFetchCount=40
+
+# ======================
+# Logging Configuration Overrides (Optional)
+# ======================
+AMQ_Serilog__MinimumLevel__Default=Information
+AMQ_Serilog__MinimumLevel__Override__System=Warning
+AMQ_Serilog__MinimumLevel__Override__Microsoft=Warning
+AMQ_Serilog__MinimumLevel__Override__Discord=Information
+
+# ======================
+# Docker/Production Overrides (Optional)
+# ======================
+# AMQ_DataPaths__Logs=/app/Data/Logs
+# AMQ_ConnectionStrings__AmiquinContext=Data Source=/app/Data/amiquin.db
