--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -11,12 +11,124 @@
     "MessageFetchCount": 40,
     "MaxTokens": 20000
   },
-  "Chat": {
-    "AuthToken": "your-openai-api-key",
-    "SystemMessage": "I want you to act as personal assistant called Amiquin. You are friendly, helpful and professional.",
-    "TokenLimit": 2000,
-    "Enabled": true,
-    "Model": "gpt-4o-mini"
+  "LLM": {
+    "DefaultProvider": "OpenAI",
+    "EnableFallback": true,
+    "FallbackOrder": ["OpenAI", "Grok", "Gemini"],
+    "GlobalSystemMessage": "I want you to act as personal assistant called Amiquin. You are friendly, helpful and professional.",
+    "GlobalTemperature": 0.6,
+    "GlobalTimeout": 120,
+    "Providers": {
+      "OpenAI": {
+        "Enabled": true,
+        "ApiKey": "sk-your-openai-api-key",
+        "BaseUrl": "https://api.openai.com/v1/",
+        "DefaultModel": "gpt-4o-mini",
+        "Models": {
+          "gpt-4o": {
+            "Name": "GPT-4 Omni",
+            "MaxTokens": 128000,
+            "MaxOutputTokens": 4096,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gpt-4o-mini": {
+            "Name": "GPT-4 Omni Mini",
+            "MaxTokens": 128000,
+            "MaxOutputTokens": 16384,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gpt-4-turbo": {
+            "Name": "GPT-4 Turbo",
+            "MaxTokens": 128000,
+            "MaxOutputTokens": 4096,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gpt-4": {
+            "Name": "GPT-4",
+            "MaxTokens": 8192,
+            "MaxOutputTokens": 4096,
+            "SystemMessage": null,
+            "Temperature": null
+          }
+        }
+      },
+      "Grok": {
+        "Enabled": false,
+        "ApiKey": "xai-your-grok-api-key",
+        "BaseUrl": "https://api.x.ai/v1/",
+        "DefaultModel": "grok-3",
+        "Models": {
+          "grok-3": {
+            "Name": "Grok 3 - Latest Stable",
+            "MaxTokens": 131072,
+            "MaxOutputTokens": 8192,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "grok-3-mini": {
+            "Name": "Grok 3 Mini - Fast & Efficient",
+            "MaxTokens": 131072,
+            "MaxOutputTokens": 4096,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "grok-4-0709": {
+            "Name": "Grok 4 (July 2024) - Most Advanced",
+            "MaxTokens": 131072,
+            "MaxOutputTokens": 8192,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "grok-beta": {
+            "Name": "Grok Beta - Experimental",
+            "MaxTokens": 131072,
+            "MaxOutputTokens": 4096,
+            "SystemMessage": null,
+            "Temperature": null
+          }
+        }
+      },
+      "Gemini": {
+        "Enabled": false,
+        "ApiKey": "your-gemini-api-key",
+        "BaseUrl": "https://generativelanguage.googleapis.com/",
+        "DefaultModel": "gemini-1.5-flash",
+        "SafetyThreshold": "BLOCK_NONE",
+        "Models": {
+          "gemini-1.5-pro": {
+            "Name": "Gemini 1.5 Pro",
+            "MaxTokens": 2097152,
+            "MaxOutputTokens": 8192,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gemini-1.5-flash": {
+            "Name": "Gemini 1.5 Flash",
+            "MaxTokens": 1048576,
+            "MaxOutputTokens": 8192,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gemini-1.5-flash-8b": {
+            "Name": "Gemini 1.5 Flash 8B",
+            "MaxTokens": 1048576,
+            "MaxOutputTokens": 8192,
+            "SystemMessage": null,
+            "Temperature": null
+          },
+          "gemini-pro": {
+            "Name": "Gemini Pro",
+            "MaxTokens": 32768,
+            "MaxOutputTokens": 8192,
+            "SystemMessage": null,
+            "Temperature": null
+          }
+        }
+      }
+    }
   },
   "External": {
     "NewsApiUrl": "https://inshorts.com/",
