feat: Refactor configuration options and services for improved modularity and clarity

--- a/.env.example
+++ b/.env.example
@@ -103,7 +103,7 @@ AMQ_Voice__Enabled=true
 # General Bot Settings
 # ======================
 AMQ_Bot__Name=Amiquin
-AMQ_Bot__Version=1.0.0
+# AMQ_Bot__Version is now read from the assembly version, not configuration
 AMQ_Bot__PrintLogo=false
 AMQ_Bot__MessageFetchCount=40
 
