--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -6,8 +6,8 @@
     "CommandsGuildId": null
   },
   "Bot": {
-    "Token": "your-discord-bot-token",
-    "OpenAIKey": "your-openai-api-key",
+    "Name": "Amiquin",
+    "PrintLogo": false,
     "MessageFetchCount": 40,
     "MaxTokens": 20000
   },
@@ -131,9 +131,12 @@
     }
   },
   "External": {
-    "NewsApiUrl": "https://inshorts.com/",
+    "NewsApiUrl": "https://inshorts.com/"
+  },
+  "Voice": {
+    "TTSModelName": "en_GB-northern_english_male-medium",
     "PiperCommand": "piper",
-    "ModelName": "en_GB-northern_english_male-medium"
+    "Enabled": true
   },
   "Database": {
     "Mode": 1,
