feat: Integrate JobManager with advanced job tracking and management capabilities

--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -160,6 +160,18 @@
     "CleanupIntervalMinutes": 30,
     "MaxHistoryLength": 50
   },
+  "JobManager": {
+    "HealthCheckIntervalSeconds": 300,
+    "MaxPendingJobs": 50,
+    "MaxPendingStreams": 25,
+    "MaxTimeoutMonitors": 25,
+    "DefaultTimeoutSeconds": 300,
+    "MaxQueueTimeoutSeconds": 60,
+    "EnableAutoRestart": true,
+    "DefaultMaxRetryAttempts": 3,
+    "MinimumJobIntervalSeconds": 5,
+    "MaximumJobIntervalSeconds": 86400
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
