Refactor database migrations: remove obsolete migrations and update schema
- Deleted migrations for session architecture, GUID primary keys, and adding provider to chat session.
- Updated the model snapshot to reflect the current state of the database.
- Added new initial migration with complete schema for BotStatistics, ServerMetas, ChatSessions, CommandLogs, Messages, NachoPacks, Toggles, and SessionMessages.
- Adjusted properties and constraints in the new migration to ensure proper relationships and indexing.

--- a/.env.example
+++ b/.env.example
@@ -77,11 +77,27 @@ AMQ_LLM__Providers__Gemini__Models__gemini-1.5-flash__MaxOutputTokens=8192
 AMQ_Database__Mode=1
 # Mode 0: MySQL, Mode 1: SQLite, Mode 2: MSSQL, Mode 3: PostgreSQL
 
+# Provider-specific Connection Strings (Recommended)
 # SQLite Connection (when Mode=1)
+AMQ_ConnectionStrings__Amiquin-Sqlite=Data Source=Data/Database/amiquin.db
+
+# MySQL Connection (when Mode=0)
+# AMQ_ConnectionStrings__Amiquin-Mysql=Server=localhost;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;Pooling=True;
+
+# Legacy Connection String (for backward compatibility)
 AMQ_ConnectionStrings__AmiquinContext=Data Source=Data/Database/amiquin.db
 
 # MySQL Connection (when Mode=0)
 # AMQ_ConnectionStrings__AmiquinContext=Server=localhost;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;Pooling=True;
+
+# ======================
+# Docker MySQL Configuration (for docker-compose)
+# ======================
+AMQ_BOT_NAME=amiquin-instance
+AMQ_DB_ROOT_PASSWORD=your-secure-root-password-here
+AMQ_DB_NAME=amiquin_db
+AMQ_DB_USER=amiquin_user
+AMQ_DB_USER_PASSWORD=your-secure-user-password-here
 
 # ======================
 # Data Paths Configuration
