--- a/dev/toc.yml
+++ b/dev/toc.yml
@@ -27,6 +27,8 @@
       href: docs/scripts-reference.md
     - name: Database Schema
       href: docs/database-schema.md
+    - name: Database Provider Connections
+      href: docs/database-provider-connections.md
     - name: Changelog
       href: docs/changelog/
 - name: API Reference
