Add MySql migration snapshot and initialize SQLite migration
- Created a new migration snapshot for MySql database schema in AmiquinContextModelSnapshot.cs.
- Removed obsolete SQLite migration files: InitialMigration.cs, ServerMetaModelCorrection.cs, and AddContextToSession.cs.
- Added new SQLite migration files: Init_Sqlite.Designer.cs and Init_Sqlite.cs to establish the initial database schema for SQLite.

--- a/.env.example
+++ b/.env.example
@@ -82,22 +82,32 @@ AMQ_Database__Mode=1
 AMQ_ConnectionStrings__Amiquin-Sqlite=Data Source=Data/Database/amiquin.db
 
 # MySQL Connection (when Mode=0)
-# AMQ_ConnectionStrings__Amiquin-Mysql=Server=localhost;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;Pooling=True;
+# For local development:
+# AMQ_ConnectionStrings__Amiquin-Mysql=Server=localhost;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
+# For Docker Compose (use container name as server):
+# AMQ_ConnectionStrings__Amiquin-Mysql=Server=mysql;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
 
 # Legacy Connection String (for backward compatibility)
 AMQ_ConnectionStrings__AmiquinContext=Data Source=Data/Database/amiquin.db
 
 # MySQL Connection (when Mode=0)
-# AMQ_ConnectionStrings__AmiquinContext=Server=localhost;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;Pooling=True;
+# For local development:
+# AMQ_ConnectionStrings__AmiquinContext=Server=localhost;Port=3306;Database=amiquin_db;Uid=amiquin_user;Pwd=amiquin_password;SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
+# For Docker Compose (use container name as server):
+# AMQ_ConnectionStrings__AmiquinContext=Server=mysql;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;
 
 # ======================
 # Docker MySQL Configuration (for docker-compose)
 # ======================
 AMQ_BOT_NAME=amiquin-instance
+AMQ_DATABASE_MODE=0
 AMQ_DB_ROOT_PASSWORD=your-secure-root-password-here
 AMQ_DB_NAME=amiquin_db
 AMQ_DB_USER=amiquin_user
 AMQ_DB_USER_PASSWORD=your-secure-user-password-here
+
+# MySQL Connection String for Docker Compose
+AMQ_ConnectionStrings__Amiquin-Mysql="Server=localhost;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;"
 
 # ======================
 # Data Paths Configuration
