--- a/source/Amiquin.Bot/Configuration/appsettings.example.json
+++ b/source/Amiquin.Bot/Configuration/appsettings.example.json
@@ -140,7 +140,7 @@
   },
   "Database": {
     "Mode": 1,
-    "ConnectionString": "Server=localhost;User=YourUser;Password=YourPassword;Database=YourDB;sslmode=none;AllowPublicKeyRetrieval=True",
+    "ConnectionString": "Server=localhost;Port=3306;Database=${AMQ_DB_NAME};Uid=${AMQ_DB_USER};Pwd=${AMQ_DB_USER_PASSWORD};SslMode=None;AllowPublicKeyRetrieval=True;Pooling=True;",
     "SQLitePath": "Data Source=/Amiquin/Data/Amiquin.db",
     "LogsPath": "/Amiquin/Data/Logs"
   },
